# OpenGLES-Experiment

./: .gitignore  README.md  cleanup.sh
Assets/: anime_charcter.mtl  test.txt
Libraries/libpng-1.6.35/projects/vstudio/Release/: libpng16.lib  zlib.lib
Libraries/libpng-1.6.35/projects/vstudio/libpng/: libpng.vcxproj
Libraries/libpng-1.6.35/projects/vstudio/zlib/: zlib.vcxproj
OGLES/: cleanup.sh
OGLES/Sources/: Implement.cpp  Implement.h  Model.cpp  Mystic.cpp  Mystic.h  OGLNative.cpp  OGLNative.h  OGLRender.cpp  OGLShader.cpp  OGLShader.h  Speak.cpp  Speak.h  Vertex.cpp  Vertex.h
OGLES/app/: CMakeLists.txt  build.gradle
OGLES/app/src/main/: AndroidManifest.xml
OGLES/app/src/main/assets/: deer.mtl
OGLES/app/src/main/cpp/: AssetNative.cpp  AssetNative.h  JNIBridge.cpp  Model.cpp  Model.h  OGLNative.h  OGLRender.cpp  OGLRender.h  OGLShader.cpp  Speak.cpp
OGLES/app/src/main/java/id/hazmi/ogles/: JNIBridge.java  OGLRenderer.java
OGLES/projects/CodeBlocks/: OGL-CodeBlocks.cbp  OGLAdapter.h  main.cpp
OGLES/projects/CodeBlocks/CodeBlocks/: OGL-CodeBlocks.cbp
OGLES/projects/Libraries/glfw-3.2.1/lib/Linux64/: libglfw.so.3.2
OGLES/projects/vs2015/: .gitignore  OGL-vs2015.sln
OGLES/projects/vs2015/vs2015/: ReadMe.txt  main.cpp  stdafx.cpp  vs2015.vcxproj
OGLES/qtproject/: OGLAdapter.cpp  OGLAdapter.h  PlatformDefine.h  QOGLWidget.cpp  QOGLWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qtproject.pro
Projects/AndroidStudio/OGLES/app/: CMakeLists.txt  build.gradle
Projects/AndroidStudio/OGLES/app/src/main/cpp/: AssetNative.cpp  JNIBridge.cpp  PlatformDefine.h  stdafx.h
Projects/AndroidStudio/OGLES/app/src/main/java/id/hazmi/ogles/: MainActivity.java  OGLRenderer.java  OGLSurfaceView.java
Projects/AndroidStudio/OGLES/app/src/main/res/layout/: activity_main.xml
Projects/AndroidStudio/OGLES/app/src/test/java/id/hazmi/ogles/: ExampleUnitTest.java
Projects/AndroidStudio/OGLES/gradle/wrapper/: gradle-wrapper.properties
Projects/CodeBlocks/: OGL-CodeBlocks.cbp
Projects/vs2015/: OGL-vs2015.sln
Projects/vs2015/vs2015/: PlatformDefine.h  main.cpp  vs2015.vcxproj  vs2015.vcxproj.filters
Sources/: Implement.cpp  Implement.h  Model.cpp  Model.h  ModelType.cpp  ModelType.h  ModelType1.cpp  ModelType1.h  ModelType2.cpp  ModelType2.h  OGLNative.cpp  OGLRender.cpp  Speak.cpp  Speak.h  Vertex.cpp  Vertex.h  nfgReader.cpp  nfgReader.h  objReader.cpp  objReader.h  pngLoader.cpp  pngLoader.h  tgaLoader.cpp  tgaLoader.h
Sources/Engine/: Engine.cpp  Engine.h  Implement.cpp  Implement.h
Sources/Engine/Models/: Model.cpp  ModelType.cpp  ModelType.h  ModelType1.cpp  ModelType1.h  ModelType2.cpp  ModelType2.h
Sources/Engine/Models/Resources/: Vertex.cpp  Vertex.h  nfgReader.cpp  objReader.cpp  objReader.h  pngLoader.cpp  pngLoader.h  tgaLoader.cpp
Sources/Engine/Models/Textures/: TextureLoader.cpp  TextureLoader.h
Sources/Engine/Models/Textures/SOIL/: README.md  SOIL.c  stb_image_aug.cpp
Sources/Engine/OGL/: OGLAdapter.h  OGLNative.cpp  OGLNative.h  OGLRender.cpp  OGLRender.h  OGLShader.h
Sources/Engine/Platform/: Platform.cpp  Platform.h
Sources/Engine/Platform/Android/: FileSystem.cpp  FileSystem.h  Implement.cpp  PlatformAndroid.cpp  PlatformAndroid.h
Sources/Engine/Platform/Win32/: FileSystem.cpp  FileSystem.h  Implement.cpp  Implement.h  ImplementWin32.cpp  ImplementWin32.h  PlatformWin32.cpp  PlatformWin32.h
Sources/Engine/Utils/: Mystic.cpp  Mystic.h  Speak.cpp  Speak.h
projects/AndroidStudio/OGLES/: .gitignore
projects/AndroidStudio/OGLES/app/: CMakeLists.txt
projects/AndroidStudio/OGLES/app/src/androidTest/java/id/hazmi/ogles/: ExampleInstrumentedTest.java
projects/AndroidStudio/OGLES/app/src/main/cpp/: AssetNative.cpp  JNIBridge.cpp  PlatformDefine.h
projects/AndroidStudio/OGLES/app/src/main/java/id/hazmi/ogles/: MainActivity.java
projects/AndroidStudio/OGLES/gradle/wrapper/: gradle-wrapper.properties
projects/CodeBlocks/: OGL-CodeBlocks.cbp  PlatformDefine.h  main.cpp
projects/vs2015/: OGL-vs2015.sln
projects/vs2015/vs2015/: LeakChecker.h  main.cpp  tgaLoader.cpp  tgaLoader.h  vs2015.vcxproj  vs2015.vcxproj.filters
